--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ function hideLoader() {
     const ImageURL = document.getElementById('ImageURL').value;
 
    
-    if (!Name || !Number || !Email || !Image) {
+    if (!Name || !Number || !Email ) {
         alert("Please fill in all fields.");
         return;
     }
