--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </fieldset>
                     <br>
                     <button class="waves-effect waves-light btn" type="submit">ADD/UPDATE</button>
+                    <button class="waves-effect waves-light btn" type="reset">Reset</button>
                     <br><br>
                 </form>
                 <br><br><br>
